@@ -1238,14 +1238,14 @@ class Album {
 	}
 
 	/**
-	 * Resize all photos of an album. Movies are skipped. If wanted this can be done recursive.
+	 * Resize and optionally shrink all photos of an album. Movies are skipped.
+	 * If wanted this can be done recursive.
 	 *
 	 * @param integer	$target			New size of the longest site in pixel.
-	 * @param integer	$filesize		New minimum filesize
-	 * @param string	$pathToResized
-	 * @param boolean	$recursive
+	 * @param integer	$filesize		New minimum filesize.
+	 * @param boolean	$recursive		True if you want to resize elements in subalbums, too.
 	 */
-	function resizeAllPhotos($target, $filesize = 0, $pathToResized = '', $recursive = false) {
+	function resizeAllPhotos($target, $filesize = 0, $recursive = false) {
 		for ($i = 1; $i <= $this->numPhotos(1); $i++) {
 			if ($this->isAlbum($i) && $recursive == true) {
 				$nestedAlbum = new Album();
@@ -1255,7 +1255,7 @@ class Album {
 				echo "\n<br>";
 				printf (gTranslate('core', "Entering album %s, processing %d photos"), $this->getAlbumName($i), $np);
 
-				$nestedAlbum->resizeAllPhotos($target, $filesize = 0, $pathToResized = '', $recursive);
+				$nestedAlbum->resizeAllPhotos($target, $filesize,  $recursive);
 				$nestedAlbum->save();
 			}
 			else {
@@ -1263,7 +1263,7 @@ class Album {
 				printf(gTranslate('core', "Processing element %d..."), $i);
 
 				my_flush();
-				$this->resizePhoto($i, $target, $filesize = 0, $pathToResized = '');
+				$this->resizePhoto($i, $target, $filesize);
 			}
 		}
 	}
