@@ -1,3 +1,10 @@
+2007-06-06 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b67
+
+ * Change: Remove unneeded param $pathToResized from
+           Album::resizeAllPhotos
+
+ * Fix: Correct call of the method above.
+
 2007-05-25 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b66
 
  * Fix: Unquoted indexes in ecardform
